fix: access to widgets on smaller screen size
Allow user to scroll horizontally in list of widgets to drag'n'drop a widget in the tree.

Closes #54

--- a/src/app/pages/editor/editor.component.css
+++ b/src/app/pages/editor/editor.component.css
@@ -11,6 +11,8 @@
 
   & .widgets {
     display: flex;
+    overflow-x: scroll;
+    margin-left: 24px;
 
     & div {
       display: flex;
@@ -21,14 +23,6 @@
     & mat-divider {
       height: 100%;
       margin: 0 8px;
-
-      @media (max-width: 1605px) {
-        margin: 0 6px;
-      }
-
-      @media (max-width: 1460px) {
-        margin: 0 4px;
-      }
     }
 
     & mat-icon {
@@ -37,14 +31,6 @@
       margin: 0 8px;
 
       transform: none!important;
-
-      @media (max-width: 1605px) {
-        margin: 0 6px;
-      }
-
-      @media (max-width: 1460px) {
-        margin: 0 4px;
-      }
     }
   }
 
